[gd_scene load_steps=8 format=3 uid="uid://bcgchlpyg6dg3"]

[ext_resource type="PackedScene" uid="uid://dbd48m5vaqihq" path="res://Scenes/character_body_2d.tscn" id="1_f2ixm"]
[ext_resource type="Script" path="res://Scenes/game.gd" id="1_kfpeo"]
[ext_resource type="PackedScene" uid="uid://dtmkxqwje5anf" path="res://Scenes/character_body_2dp2.tscn" id="2_2vtew"]
[ext_resource type="PackedScene" uid="uid://b5c8ub8d415uu" path="res://Scenes/static_body_2d.tscn" id="3_0yv05"]
[ext_resource type="AudioStream" uid="uid://bsx7wukn1isrm" path="res://computerwomanwip (1).mp3" id="4_ro77h"]
[ext_resource type="PackedScene" uid="uid://d0m50qmoxyi07" path="res://Scenes/restart_screen.tscn" id="6_euqfy"]

[sub_resource type="LabelSettings" id="LabelSettings_022qi"]
font_size = 100
font_color = Color(0, 0, 0, 1)

[node name="game" type="Node2D"]
script = ExtResource("1_kfpeo")

[node name="CharacterBody2D" parent="." instance=ExtResource("1_f2ixm")]
position = Vector2(1007, 957)
scale = Vector2(4, 4)

[node name="CharacterBody2D2" parent="." instance=ExtResource("2_2vtew")]
position = Vector2(1553, 957)
scale = Vector2(-4, 4)

[node name="StaticBody2D" parent="." instance=ExtResource("3_0yv05")]
position = Vector2(-93, 1557)
scale = Vector2(3, 3)

[node name="StaticBody2D" parent="StaticBody2D" instance=ExtResource("3_0yv05")]
position = Vector2(-350.667, -1267)
rotation = 1.5708
scale = Vector2(3, 3)

[node name="StaticBody2D2" parent="." instance=ExtResource("3_0yv05")]
position = Vector2(3696, -1979)
rotation = 1.5708
scale = Vector2(9, 9)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ro77h")
volume_db = -31.55

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 853.0
offset_right = 1629.0
offset_bottom = 137.0
grow_horizontal = 2
text = "Available Blocks"
label_settings = SubResource("LabelSettings_022qi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 10.0
offset_top = 4.0
offset_right = 108.0
offset_bottom = 141.0
grow_horizontal = 2
text = "3"
label_settings = SubResource("LabelSettings_022qi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 2466.0
offset_right = 2564.0
offset_bottom = 137.0
grow_horizontal = 2
text = "3"
label_settings = SubResource("LabelSettings_022qi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="restart_screen" parent="." instance=ExtResource("6_euqfy")]
